--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://findyam.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: findyam's place
+subtitle: Good Good Study! Day Day UP!
+author: Brady Li
 simple_search: https://www.google.com/search
 description:
 
